test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/missing_parameter_list.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(f)
  {
  return
  const int(0)
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
